fix dependences
